# PythonRep

./: AddressBook.json  Pipfile  mynotes.db  requirements.txt  sqlalchemy_example.db  test.db
Birthday/: main.py
Draft/: main.py  output_file.txt  test – копія.txt
EX-08/: create_db.py  fill_data.py  salary.db
EX-09/: mynotes.db  pyproject.toml
EX-09/alembic/versions/: 1737fa8bb47d_init.py
Helper/: main.py
Helper10/: main.py
Helper11/: main.py
Helper12/: main.py
Helper21/: main.py
Helper22/: Dockerfile  Pipfile  main.py
HelperAdv/: main.py
NTP/: main.py
SortOut/: sort.py  test
SortOut23/: clean.py
SortOut_23_1/: main.py
Web 2_6_0/: connect.py  create_table.py  update.py
Web 2_6_1/: courses.db  courses.sql  create_db.py  fill_data.py  query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  query_11.sql  query_12.sql  select.py
Web 2_7/: alembic.ini  connect_db.py  courses.db  crud.py  models.py  my_select.py  seed.py
Web 2_8/: connect.py  main.py  models.py  seeds.py  seeds_rabbit.py
Web 2_8-1/: config.ini  connect.py  pyproject.toml
Web 2_9/: authors.json  connect.py  consumer_email.py  consumer_sms.py  main.py  models_rabbit.py  parce.py  producer.py  seeds.py
Web_24/: main.py
Web_25/: main.py
Web_25 – 1/: main.py
Web_2_10/mysite/: db.sqlite3  manage.py
Web_2_10_1/notes/: db.sqlite3  manage.py
Web_2_10_2/quotes/: db.sqlite3
Web_2_11/: pyproject.toml
Web_2_11_1/: main.py
Web_2_11_1_1/: main.py  sql_app.db
clean_folder/: setup.py
(+37 files in other folders)
